goku-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goku-gpu # pod name
  labels:
    creation_method: manual
    env: prod
spec:
  nodeSelector: # select the node label to deploy
    gpu: "true" # we select any node with gpu=true and deploy
  containers:
  - image: gokulakrishna/docker-training
    name: goku # container name
    ports:
    - containerPort: 8080
      protocol: TCP
