goku-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goku-manual-v2 # pod name
  labels:
    creation_method: manual
    env: prod
spec:
  hostNetwork: true
  containers:
  - name: ambassador
    image: luksa/kubectl-proxy:1.6.2
    securityContext:
      runAsNonRoot: yes
  - image: gokulakrishna/docker-training
    name: goku # container name
    securityContext:
      runAsNonRoot: yes
    ports:
    - containerPort: 8080
      protocol: TCP
    # Downward API example
