volumens.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample
spec:
  containers:
  - image: nginx
    name: sample
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
  volumes:
  - name: html
    gitRepo:
      repository: https://github.com/binary-com/deriv-email-templates
      revision: master
      directory: .
