goku-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-test
spec:
  type: LoadBalancer
  selector:
    app: kubia
  ports: 
  - port: 80
    targetPort: 8080
